--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
         <div class="row gx-0">
             <div class="col-lg-8 text-center text-lg-start mb-2 mb-lg-0">
                 <div class="d-inline-flex align-items-center" style="height: 45px;">
-                    <small class="me-3 text-white"><i class="fa fa-map-marker-alt me-2"></i>123 Street, New York, USA</small>
-                    <small class="me-3 text-white"><i class="fa fa-phone-alt me-2"></i>+012 345 6789</small>
-                    <small class="text-white"><i class="fa fa-envelope-open me-2"></i>info@example.com</small>
+                    <small class="me-3 text-white"><i class="fa fa-map-marker-alt me-2"></i>67/B DIT Road, Malibagh Chowdhury Para, Dhaka-1219</small>
+                    <small class="me-3 text-white"><i class="fa fa-phone-alt me-2"></i>+880 1813 551621</small>
+                    <small class="text-white"><i class="fa fa-envelope-open me-2"></i>bajajpoint.dhk@gmail.com</small>
                 </div>
             </div>
             <div class="col-lg-4 text-center text-lg-end">
@@ -96,27 +96,29 @@
             </div>
         </nav>
 
-        <div id="header-carousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
+        <div id="header-carousel" class="carousel slide carousel-fade" data-bs-ride="carousel">            
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="w-100" src="assets/img/carousel-1.jpg" alt="Image">
+                    <img class="w-100" src="assets/img/bp/motorcycle/aa-slider/pulsar150-td.jpg" alt="Image">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
-                        <div class="p-3" style="max-width: 900px;">
-                            <h5 class="text-white text-uppercase mb-3 animated slideInDown">Creative & Innovative</h5>
-                            <h1 class="display-1 text-white mb-md-4 animated zoomIn">Creative & Innovative Digital Solution</h1>
-                            <a href="quote.html" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Free Quote</a>
-                            <a href="" class="btn btn-outline-light py-md-3 px-md-5 animated slideInRight">Contact Us</a>
+                        <div class="p-3" style="max-width: 900px;">                            
+                            <a href="quote.html" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Explore</a>                            
                         </div>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="w-100" src="assets/img/carousel-2.jpg" alt="Image">
+                    <img class="w-100" src="assets/img/bp/motorcycle/aa-slider/pulsar-n160.jpg" alt="Image">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
-                        <div class="p-3" style="max-width: 900px;">
-                            <h5 class="text-white text-uppercase mb-3 animated slideInDown">Creative & Innovative</h5>
-                            <h1 class="display-1 text-white mb-md-4 animated zoomIn">Creative & Innovative Digital Solution</h1>
-                            <a href="quote.html" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Free Quote</a>
-                            <a href="" class="btn btn-outline-light py-md-3 px-md-5 animated slideInRight">Contact Us</a>
+                        <div class="p-3" style="max-width: 900px;">                            
+                            <a href="quote.html" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Explore</a>                            
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="w-100" src="assets/img/bp/motorcycle/aa-slider/avenger160.jpg" alt="Image">
+                    <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
+                        <div class="p-3" style="max-width: 900px;">                            
+                            <a href="quote.html" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Explore</a>                            
                         </div>
                     </div>
                 </div>
@@ -132,54 +134,60 @@
                 <span class="visually-hidden">Next</span>
             </button>
         </div>
+        <!-- <div id="owl-carousel" class="owl-carousel owl-theme"> 
+            <div class="item"><img src="assets/img/bp/motorcycle/aa-slider/avenger160.jpg" alt="The Last of us"></div>
+            <div class="item"><img src="assets/img/bp/motorcycle/aa-slider/pulsar-n160.jpg" alt="GTA V"></div>
+            <div class="item"><img src="assets/img/bp/motorcycle/aa-slider/avenger160.jpg" alt="Mirror Edge"></div>           
+          </div> -->
     </div>
+    
     <!-- Navbar & Carousel End -->
 
     <!-- Facts Start -->
-    <div class="container-fluid facts py-5 pt-lg-0">
+    <!-- <div class="container-fluid facts py-5 pt-lg-0">
         <div class="container py-5 pt-lg-0">
             <div class="row gx-0">
                 <div class="col-lg-4 wow zoomIn" data-wow-delay="0.1s">
-                    <div class="bg-primary shadow d-flex align-items-center justify-content-center p-4" style="height: 150px;">
+                    <div class="bg-primary shadow d-flex align-items-center justify-content-center p-4" style="height: 100px;">
                         <div class="bg-white d-flex align-items-center justify-content-center rounded mb-2" style="width: 60px; height: 60px;">
                             <i class="fa fa-users text-primary"></i>
                         </div>
                         <div class="ps-4">
                             <h5 class="text-white mb-0">Happy Clients</h5>
-                            <h1 class="text-white mb-0" data-toggle="counter-up">12345</h1>
+                            <h1 class="text-white mb-0" data-toggle="counter-up">26000</h1>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 wow zoomIn" data-wow-delay="0.3s">
-                    <div class="bg-light shadow d-flex align-items-center justify-content-center p-4" style="height: 150px;">
+                    <div class="bg-light shadow d-flex align-items-center justify-content-center p-4" style="height: 100px;">
                         <div class="bg-primary d-flex align-items-center justify-content-center rounded mb-2" style="width: 60px; height: 60px;">
                             <i class="fa fa-check text-white"></i>
                         </div>
                         <div class="ps-4">
-                            <h5 class="text-primary mb-0">Projects Done</h5>
-                            <h1 class="mb-0" data-toggle="counter-up">12345</h1>
+                            <h5 class="text-primary mb-0">Bike Sold Worldwide (Million)</h5>
+                            <h1 class="mb-0" data-toggle="counter-up">18</h1>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 wow zoomIn" data-wow-delay="0.6s">
-                    <div class="bg-primary shadow d-flex align-items-center justify-content-center p-4" style="height: 150px;">
+                    <div class="bg-primary shadow d-flex align-items-center justify-content-center p-4" style="height: 100px;">
                         <div class="bg-white d-flex align-items-center justify-content-center rounded mb-2" style="width: 60px; height: 60px;">
                             <i class="fa fa-award text-primary"></i>
                         </div>
                         <div class="ps-4">
                             <h5 class="text-white mb-0">Win Awards</h5>
-                            <h1 class="text-white mb-0" data-toggle="counter-up">12345</h1>
+                            <h1 class="text-white mb-0" data-toggle="counter-up">8</h1>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- Facts Start -->
 
 
     <!-- About Start -->
-    <div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s">
+    <div class="container-fluid wow fadeInUp" data-wow-delay="0.1s">
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-lg-7">
